fix: no stretched image in tweet dialog

--- a/Main/styles/common/_tweet-dialog.scss
+++ b/Main/styles/common/_tweet-dialog.scss
@@ -72,6 +72,7 @@
                 box-sizing: border-box;
                 padding: 0px 18px;
                 height: auto;
+                object-fit: contain;
             }
         }
 
